[feat] Notice image attachment, update swagger.yml
